Fixed screen width issues on mobile

--- a/_scss/_head.scss
+++ b/_scss/_head.scss
@@ -11,9 +11,14 @@
     height:auto;
   }
   &:after{
-    width:100%;
-    height:100%;
-    content:" ";
-    background:rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    content: " ";
+    display: block;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: -3;
+    background: rgba(0,0,0,0.3);
   }
 }
